@@ -1,3 +1,10 @@
+ * Fix issue causing archetypes schema update to fail due to topic not
+   checking syndication state in initializeArchetype.
+   [alecm]
+
+ * Add missing alternate views for folderish types.
+   [alecm]
+
 1.0.1-final 2005-10-13
 ======================
 
